# downloader

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: download_version.rs
src/: error.rs  launcher_manifest.rs  lib.rs  manifest.rs  progress.rs
src/client/: client_downloader.rs  downloader.rs  mod.rs  verify.rs
