[package]
name = "mc_downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.64"
chksum = "0.1.0-rc5"
futures = "0.3"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "time", "rt"] }

[dev-dependencies]
pbr = "1.0.4"
