[package]
name = "mc_downloader"
version = "0.1.0"
edition = "2021"
description = "A library for downloading Minecraft assets and libraries."
license = "MIT"
repository = "https://github.com/minecraft-rs/downloader"
include = ["/src", "/examples"]

[dependencies]
async-trait = "0.1.64"
chksum = { version = "0.2.2", default-features = false, features = ["sha1"] }
futures = "0.3"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "time", "rt"] }

[dev-dependencies]
pbr = "1.0.4"
